# ser4010

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NEWS  README.md  TODO  config.h.in
firmware/common/: PLACE SI4010 COMMON FILES HERE.txt
firmware/ser4010/src/: .gitignore  ser4010_main.c  serco_defines.h  soft_uart.h  soft_uart.src
hardware/schematic/: cp2102n-a01-gqfn20.dcm  cp2102n-a01-gqfn20.lib  fp-lib-table  ser4010-cache.lib  ser4010.kicad_pcb  ser4010.net  ser4010.pro  ser4010.sch  si4010.dcm  si4010.lib  sym-lib-table
hardware/schematic/Adafruit-SMA_EDGELAUNCH.pretty/: Adafruit-SMA_EDGELAUNCH.kicad_mod
hardware/schematic/Amphenal_FCI_10118193-0001LF_USB_Micro-B.pretty/: Amphenal_FCI_10118193-0001LF_USB_Micro-B.kicad_mod
hardware/schematic/DI_Logo.pretty/: DI_Logo.kicad_mod
hardware/schematic/IQD_CFPX-180.pretty/: Crystal_SMD_IQD_CFPX-180_4pin_3.2x2.5mm.kicad_mod
hardware/schematic/Measurement_Point_Round-SMD-Pad_Small-Labeled.pretty/: Measurement_Point_Round-SMD-Pad_Small-Labeled.kicad_mod
hardware/schematic/silabs_0402.pretty/: C_0402.kicad_mod
libser4010/: CMakeLists.txt  ser4010.c  ser4010.h  ser4010_config.c  serco.c  serco.h  serco_defines.h  si4010_tables.h
tools/: CMakeLists.txt  blindctl_somfy.c  crc_16.c  crc_16.h  dehexify.c  dehexify.h  pn9.c  pn9.h  ser4010_console.c  ser4010_dump.c  ser4010_kaku.c  ser4010_pulse.c  ser4010_rts.c  ser4010_rts.h  ser4010_si443x.c  ser4010_smartwares.c  ser4010_somfy.c  ser4010_sweep.c  test_comm.c
